--- a/css/settingsMenu.css
+++ b/css/settingsMenu.css
@@ -13,3 +13,22 @@
 	left: 0;
 	right: 0;
 }
+
+#duboverSettingsMenuApplyButton {
+	border-right: 1px solid #999;
+	border-top: 1px solid #999;
+	width: 12.5em;
+	
+	position: absolute;
+	bottom: 0em; 
+	left: 0;
+}
+
+#duboverSettingsMenuCancelButton {
+	border-top: 1px solid #999;
+	width: 12.5em;
+	
+	position: absolute;
+	bottom: 0em; 
+	right: 0;
+}
